# TaskTracker

./: .flake8  MANIFEST.in  Pipfile  README.md  all_tasks_by_worker_id.py  all_tasks_script.py  db.json  db_task.sql  db_user.sql  dodo.py  pyproject.toml  testing.py  win.py  win.pyw  workers_and_types_script.py
TaskTracker/: __init__.py  __main__.py  scripts.py
docs/source/: API.rst  conf.py  index.rst
po/ru_RU.UTF-8/LC_MESSAGES/: msg.po
